# ESP_WIFI_THROUGH

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old  update_source.py
components/BRIDGE/: CMakeLists.txt  bridge.c  bridge.h
components/CONFIG/: CMakeLists.txt  config.c  config.h
components/CONFORM/: CMakeLists.txt  conform.c  conform.h
components/DETAIL/: CMakeLists.txt  self_detail_json.c  self_detail_json.h
components/MEMORY_POOL/: CMakeLists.txt  memory_pool.c  memory_pool.h
components/MSG/: CMakeLists.txt  msg_def.h
components/SOCKET/: CMakeLists.txt  socket_init.c  socket_init.h  udp_task.c  udp_task.h
components/UART/: CMakeLists.txt  uart_init.c  uart_init.h  uart_task.c  uart_task.h
components/WIFI/: CMakeLists.txt  link_wifi.c  link_wifi.h
main/: CMakeLists.txt  bridge.h  config.h  link_wifi.h  main.c  main.h  self_detail_json.c  self_detail_json.h  uart.c  update_source.py
main/CONFORM/: conform.c  conform.h  conform_event.c  conform_event.h
main/MSG/: msg_def.c  msg_def.h
main/SOCKET/: socket_init.c  socket_init.h  udp_task.c  udp_task.h
main/SOCKET/UDP/: udp_init.c  udp_init.h
main/UART/: uart_init.c  uart_init.h  uart_rec.c  uart_rec.h  uart_send.c  uart_send.h  uart_task.c  uart_task.h
